install/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blerg
  labels:
    app.kubernetes.io/part-of: blerg
